# qt-cmake-test

./: .gitignore  README.md
testApp/: CMakeLists.txt  Example.qml  example.cpp  example.qml
testPlugin/: CMakeLists.txt  myitem.cpp  myitem.h  testelement.cpp  testelement.h  testimageprovider.cpp  testimageprovider.h
